--- a/css.css
+++ b/css.css
@@ -138,8 +138,8 @@ border-radius: 2%;
 box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-@media (min-width: 768px){
-.row-cols-md-5>* {
+@media (min-width: 720px){
+.row-cols-lg-5>* {
     flex: 0 0 auto;
     width: 18% !important;
 
