--- a/css.css
+++ b/css.css
@@ -1,101 +1,134 @@
+/* Main css code for all pages */
+/* Sets the color of the background */
 body {
-    background-color: #dfdfdf;
+  background-color: #dfdfdf;
 }
 
+/* Sets the color of the second navbar background*/
 .navbar-light.second-navbar {
-    background-color: #00a1b6;
+  background-color: #00a1b6;
 }
 
-.navbar-nav.first-navbar{
-    flex-direction: row;
-    justify-content: space-between;
-    width: 150px;
-    align-items: center;
+.navbar-nav.first-navbar {
+  flex-direction: row;
+  justify-content: space-between;
+  width: 150px;
+  align-items: center;
 }
 
-.nav-link.first-navbar{
-    padding-left: 0rem !important;
-    padding-right: 0rem !important;
+.nav-link.first-navbar {
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
 }
 
-.Logo{
-    height: 50px;
-    width: 50px;
+.navbar-brand {
+  font-size: calc(0.75rem + 0.75vw);
 }
 
-.Logo-footer{
-    height: 20px;
-    width: 20px;
+/* Sets the size of the logo image */
+.Logo {
+  height: 50px;
+  width: 50px;
 }
 
-.btn-outline-success{
-    color: #000000;
-    border-color: #000000;
+.Logo-footer {
+  height: 20px;
+  width: 20px;
+}
+
+/* Sets the color of the navbar button border */
+.btn-outline-success {
+  color: #000000;
+  border-color: #000000;
 }
 
 .dropdown-submenu {
-    position: relative;
-  }
-  
-  .dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -1px;
-  }
-
-
-
-@media (min-width: 576px){
-    .container, .container-sm {
-        max-width: 540px;
-    }
-    }
-
-@media (min-width: 768px){
-    .container, .container-md, .container-sm {
-        max-width: 720px;
+  position: relative;
 }
- }
-@media (min-width: 992px){
-    .container, .container-lg, .container-md, .container-sm {
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
+
+/* Sets the sizes of the container width  */
+@media (min-width: 576px) {
+
+  .container,
+  .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
     max-width: 900px;
+  }
 }
-}
-            
-@media (min-width: 1200px){
-    .container, .container-lg, .container-md, .container-sm, .container-xl {
+
+@media (min-width: 1200px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
     max-width: 1000px;
-}
   }
-@media (min-width: 1400px){
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+}
+
+@media (min-width: 1400px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
     max-width: 1200px;
+  }
 }
-  }
-  
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
 
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
+}
+
+/* Ends the main css code  */
 
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -108,16 +141,16 @@ body {
 }
 
 /* Cards to display brands */
-.breakline{
-  border: 0; 
-  height: 2px; 
+.break-line {
+  border: 0;
+  height: 2px;
   background-image: -webkit-linear-gradient(left, #00a1b6, #000000da, #000000);
   background-image: -moz-linear-gradient(left, #f0f0f0, #00a1b6, #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, #00a1b6, #f0f0f0);
-  background-image: -o-linear-gradient(left, #f0f0f0, #00a1b6, #f0f0f0); 
+  background-image: -o-linear-gradient(left, #f0f0f0, #00a1b6, #f0f0f0);
 }
 
-.brand{
+.brand {
   color: #000000;
   text-decoration-line: none;
   font-size: 1.3em;
@@ -127,21 +160,70 @@ body {
 
 /* displaying items */
 
-.item-display{
-background-color: white;
-margin-right: calc(var(--bs-gutter-x) * .5);
-margin-left: calc(var(--bs-gutter-x) * .5);
-padding: 0%;
-border: #00000098 solid;
-border-width: 1px;
-border-radius: 2%;
-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+.item-display {
+  background-color: white;
+  margin-right: calc(var(--bs-gutter-x) * .5);
+  margin-left: calc(var(--bs-gutter-x) * .5);
+  padding: 0%;
+  border: #00000098 solid;
+  border-width: 1px;
+  border-radius: 2%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
-@media (min-width: 720px){
-.row-cols-lg-5>* {
+@media (min-width: 200px) {
+  .row-cols-2>* {
     flex: 0 0 auto;
-    width: 18% !important;
+    width: 41%;
+  }
+  }
 
+@media (min-width: 320px) {
+  .row-cols-2>* {
+    flex: 0 0 auto;
+    width: 42.4%;
+  }
+  }
+
+  @media (min-width: 375px) {
+    .row-cols-2>* {
+      flex: 0 0 auto;
+      width: 43.5%;
+    }
+    }
+
+@media (min-width: 400px) {
+.row-cols-2>* {
+  flex: 0 0 auto;
+  width: 44.1%;
 }
+}
+
+@media (min-width: 768px){
+.row-cols-md-3>* {
+    flex: 0 0 auto;
+    width: 30% !important;
+}
+}
+
+
+@media (min-width: 992px) {
+  .row-cols-lg-6>* {
+    flex: 0 0 auto;
+    width: 14% !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .row-cols-lg-6>* {
+    flex: 0 0 auto;
+    width: 14.26% !important;
+  }
+}
+
+@media (min-width: 1400px) {
+  .row-cols-lg-6>* {
+    flex: 0 0 auto;
+    width: 14.66% !important;
+
+  }
 }
