--- a/public/Assets/Css/css.css
+++ b/public/Assets/Css/css.css
@@ -359,3 +359,10 @@ a.item:hover{
 
   }
 }
+
+.LoginPageButtons{
+  background-color:#00a1b6 ;
+  margin: 0 auto; 
+  width:50%;
+  border-radius: 25px;
+}
