--- a/public/Assets/Css/css.css
+++ b/public/Assets/Css/css.css
@@ -373,6 +373,22 @@ a.item:hover{
   width: 30px;
 }
 
-.centerAlign{
-  text-align: center;
+/* Split the screen in half */
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
 }
