--- a/public/Assets/Css/dashboard.css
+++ b/public/Assets/Css/dashboard.css
@@ -1,7 +1,7 @@
 .sidebar-sticky {
     position: relative;
     top: 0;
-    height: calc(100vh - 48px);
+    height: 100vh ;
     padding-top: .5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
